RESOLVED FIXED136693
bmalloc should segregate medium-sized objects by line like it does for small-sized objects
https://bugs.webkit.org/show_bug.cgi?id=136693
Summary bmalloc should segregate medium-sized objects by line like it does for small-...
Geoffrey Garen
Reported 2014-09-09 19:39:21 PDT
bmalloc should segregate medium-sized objects by line like it does for small-sized objects
Attachments
Patch (39.99 KB, patch)
2014-09-09 19:53 PDT, Geoffrey Garen
no flags
Patch (40.42 KB, patch)
2014-09-10 09:30 PDT, Geoffrey Garen
no flags
Patch (3.97 KB, patch)
2014-09-10 13:04 PDT, Geoffrey Garen
no flags
Patch (4.12 KB, patch)
2014-09-11 12:50 PDT, Geoffrey Garen
no flags
Patch (4.15 KB, patch)
2014-09-11 12:55 PDT, Geoffrey Garen
no flags
Geoffrey Garen
Comment 1 2014-09-09 19:53:26 PDT
Andreas Kling
Comment 2 2014-09-09 21:34:47 PDT
Comment on attachment 237879 [details] Patch You should upload this with USE_BMALLOC=1 for proper EWSing.
Geoffrey Garen
Comment 3 2014-09-10 09:30:44 PDT
Geoffrey Garen
Comment 4 2014-09-10 09:31:03 PDT
New patch with bmalloc enabled for EWS.
Andreas Kling
Comment 5 2014-09-10 11:14:45 PDT
Regressions: Unexpected crashes (30) accessibility/accessibility-node-reparent.html [ Crash ] accessibility/crash-determining-aria-role-when-label-present.html [ Crash ] accessibility/table-cell-for-column-and-row-crash.html [ Crash ] animations/animation-end-event-short-iterations.html [ Crash ] animations/animation-matrix-negative-scale-unmatrix.html [ Crash ] animations/animation-welcome-safari.html [ Crash ] compositing/overflow/remove-overflow-crash2.html [ Crash ] crypto/crypto-random-values-limits.html [ Crash ] css3/filters/effect-reference-removed-while-pending-resources.html [ Crash ] editing/inserting/editable-html-element.html [ Crash ] editing/inserting/insert-paragraph-selection-outside-contenteditable.html [ Crash ] editing/selection/leak-document-with-selection-inside.html [ Crash ] editing/selection/move-by-character-6.html [ Crash ] editing/style/apply-through-end-of-document.html [ Crash ] fast/canvas/canvas-backing-store-reuse.html [ Crash ] fast/canvas/canvas-bg-multiple-removal.html [ Crash ] fast/canvas/change-context.html [ Crash ] fast/canvas/webgl/context-creation-and-destruction.html [ Crash ] fast/canvas/webgl/context-lost-restored.html [ Crash ] fast/canvas/webgl/oes-texture-half-float.html [ Crash ] fast/css-grid-layout/containing-block-grids.html [ Crash ] fast/css/border-radius-viewport-vmax.html [ Crash ] fast/css/css-imports-2.html [ Crash ] fast/css/css-keyframe-style-mutate-crash.html [ Crash ] fast/dom/Attr/access-after-element-destruction.html [ Crash ] fast/dom/boolean-attribute-reflection.html [ Crash ] http/tests/appcache/detached-iframe.html [ Crash ] http/tests/misc/bad-charset-alias.html [ Crash ] http/tests/misc/char-encoding-in-hidden-charset-field-default.html [ Crash ] http/tests/misc/delete-frame-during-readystatechange.html [ Crash ]
Geoffrey Garen
Comment 6 2014-09-10 13:04:16 PDT
Geoffrey Garen
Comment 7 2014-09-11 12:50:59 PDT
Geoffrey Garen
Comment 8 2014-09-11 12:55:00 PDT
Geoffrey Garen
Comment 9 2014-09-11 13:58:13 PDT
Daniel Bates
Comment 10 2014-09-30 22:19:46 PDT
Comment on attachment 237982 [details] Patch Clearing review flag to get this patch out of the review queue since it was committed per comment #4.
Note You need to log in before you can comment on or make changes to this bug.